--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ section {
   padding: 50px 20px;
 }
 
+/* Mengurangi jarak antara bagian "Tentang Saya" dan "Kontak" */
+#about, #contact {
+  margin-bottom: 20px; /* Sesuaikan nilai margin sesuai kebutuhan */
+}
+
 footer {
   background-color: #2c3e50;
   color: #ecf0f1;
