--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,13 @@ nav ul li a:hover {
 }
 
 section {
-  padding: 20px 20px;
+  padding: 10px 10px;
 }
 
 /* Mengurangi jarak antara bagian "Tentang Saya" dan "Kontak" */
-#about, #contact {
+/*#about, #contact {
   margin-bottom: 20px; /* Sesuaikan nilai margin sesuai kebutuhan */
-}
+}*/
 
 footer {
   background-color: #2c3e50;
